deleting animations in favore of others, to avoid stacking too much effets on one components

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,13 @@
 .intro {
   margin-bottom: 2rem;
 }
+
+.home__topThree__container {
+  width: 100%;
+  height: 700px;
+  position: relative;
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: cornflowerblue;
+}
